--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,9 +14,10 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@dynamic-labs/sdk-react-core": "^1.4.4",
+    "@dynamic-labs/wagmi-connector": "^1.4.4",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
-    "@rainbow-me/rainbowkit": "1.3.5",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
